@@ -18,6 +18,8 @@ Revision 0.1.4
 - Package classifiers updated.
 - The __init__.py's made non-empty (rumors are that they may be optimized 
   out by package managers).
+- Fix to Real codec exponent encoding (should be in 2's complement form),
+  some more test cases added.
 - Fix in Boolean truth testing built-in methods
 - Fix to substrate underrun error handling at ObjectIdentifier BER decoder
 - Fix to BER Boolean decoder that allows other pre-computed
